@@ -15,10 +15,6 @@ class NamerTest extends FunSuite with AssertionsForJUnit {
         (fst.lookup(path) join snd.lookup(path)) map {
           case (left, right) => NameTree.Alt(left, right)
         }
-      def enum(prefix: Path): Activity[Dtab] =
-        (fst.enum(prefix) join snd.enum(prefix)) map {
-          case (left, right) => left.alt(right)
-        }
     }
 
     def ia(i: Int) = new InetSocketAddress(i)
@@ -56,13 +52,10 @@ class NamerTest extends FunSuite with AssertionsForJUnit {
             }
           case _ => Activity.value(NameTree.Neg)
         }
-
-        def enum(prefix: Path): Activity[Dtab] = Activity.exception(new UnsupportedOperationException)
       }
 
       val namer = OrElse(pathNamer, Namer.global)
       def lookup(path: Path) = namer.lookup(path)
-      def enum(prefix: Path): Activity[Dtab] = namer.enum(prefix)
     }
   }
 
@@ -176,41 +169,6 @@ class NamerTest extends FunSuite with AssertionsForJUnit {
         === NameTree.Neg)
   }
 
-  test("Namer.expand") {
-    def assertExpand(dtab: String, path: String, expected: String) {
-      val expanded = Dtab.read(dtab).expand(Path.read(path)).sample
-      assert(Equiv[Dtab].equiv(expanded, Dtab.read(expected)),
-        "Expanded dtab \"%s\" does not match expected dtab \"%s\"".format(
-          expanded.show, Dtab.read(expected).show))
-    }
-
-    assertExpand("""
-      /x => /foo;
-      /x/1 => /xx/1;
-      /x/2 => /xx/2;
-      /foo => /y;
-      /y/1 => /yy/1;
-      /y/3 => /yy/3
-    """, "/x", """
-      /1=>/yy/1;
-      /3=>/yy/3;
-      /1=>/xx/1;
-      /2=>/xx/2
-    """)
-
-    assertExpand("""
-      /x => /foo & /bar;
-      /foo/1 => /foo1;
-      /foo/2 => /foo2;
-      /bar/1 => /bar1;
-      /bar/3 => /bar3
-    """, "/x", """
-      /1=>/foo1&/bar1;
-      /2=>/foo2;
-      /3=>/bar3
-      """)
-  }
-
   test("Namer.resolve") {
     assert(Namer.resolve("invalid").sample() match {
       case Addr.Failed(_: IllegalArgumentException) => true
@@ -226,7 +184,4 @@ class TestNamer extends Namer {
         case Path.Utf8("foo") => NameTree.Leaf(Name.Path(Path.Utf8("bar")))
         case _ => NameTree.Neg
       })
-
-  def enum(prefix: Path): Activity[Dtab] =
-    Activity.exception(new UnsupportedOperationException)
 }
